[metadata]
name = swayblur
version = 1.0.0
author = William McKinnon
author_email = contact@willmckinnon.com
description = Basic sway wallpaper auto-blurring script
url = https://github.com/willpower3309/swayblur
project_urls =
    Code=https://github.com/willpower3309/swayblur
    Issues=https://github.com/willpower3309/swayblur/issues
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sway, blur, wallpaper, desktop, ricing
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    importlib_metadata
    i3ipc
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    swayblur = swayblur.__main__:main
